--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -13,134 +13,178 @@
 -->
 <htmlform>
 
-	<script type="text/javascript">
-		function onWeightOrHeightChange() {
-			var display = '';
-			var weightKg = parseFloat(getValue('weight.value'));
-			var heightM = parseFloat(getValue('height.value')) / 100;
-			if (!isNaN(weightKg) &amp;&amp; !isNaN(heightM))  {
-				var bmi = weightKg / (heightM * heightM);
-				if (isNaN(bmi) || bmi &lt; 10 || bmi &gt; 50) {
-					display = 'Abnormal value. Were height and height entered correctly?';
-				}
-				else {
-					display = bmi.toFixed(2);
-				}
-			}
-			jQuery('#calculated-bmi').html(display);
-		}
+    <script type="text/javascript">
+        function onWeightOrHeightChange() {
+            var display = '';
+            var weightKg = parseFloat(getValue('weight.value'));
+            var heightM = parseFloat(getValue('height.value')) / 100;
+            if (!isNaN(weightKg) &amp;&amp; !isNaN(heightM)) {
+                var bmi = weightKg / (heightM * heightM);
+                if (isNaN(bmi) || bmi &lt; 10 || bmi &gt; 50) {
+                    display = 'Abnormal value. Were height and height entered correctly?';
+                }
+                else {
+                    display = bmi.toFixed(2);
+                }
+            }
+            jQuery('#calculated-bmi').html(display);
+        }
 
-		jQuery(function() {
-			getField('weight.value').change(onWeightOrHeightChange);
-			getField('height.value').change(onWeightOrHeightChange);
-			onWeightOrHeightChange();
+        jQuery(function () {
+            getField('weight.value').change(onWeightOrHeightChange);
+            getField('height.value').change(onWeightOrHeightChange);
+            onWeightOrHeightChange();
 
-			var pbirthdate = new Date("<lookup expression="patient.birthdate" />").getTime();
-			var pgender    = "<lookup expression="patient.gender" />";
+            var pbirthdate = new Date("<lookup expression="
+            patient.birthdate
+            " />"
+            ).
+            getTime();
+            var pgender = "<lookup expression="
+            patient.gender
+            " />";
 
-			if (pgender == 'F' ){
-				beforeSubmit.push(function() {
-					var lmpdate = new Date(getValue('lmp-date.value')).getTime();
-					if (lmpdate &lt; pbirthdate) {
-						getField('lmp-date.error').html('Should not be earlier than birth date').show();
-						return false;
-					}
-					return true;
-				});
-			}
-		});
-	</script>
+            if (pgender == 'F') {
+                beforeSubmit.push(function () {
+                    var lmpdate = new Date(getValue('lmp-date.value')).getTime();
+                    if (lmpdate &lt; pbirthdate) {
+                        getField('lmp-date.error').html('Should not be earlier than birth date').show();
+                        return false;
+                    }
+                    return true;
+                });
+            }
+        });
+    </script>
 
-	<div class="ke-form-header">
-		<table style="width: 100%">
-			<tr>
-				<td align="left">Date: <encounterDate id="encounter-date" showTime="true"/></td>
-				<td align="right">Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete" /></td>
-			</tr>
-		</table>
-	</div>
+    <div class="ke-form-header">
+        <table style="width: 100%">
+            <tr>
+                <td align="left">Date:
+                    <encounterDate id="encounter-date" showTime="true"/>
+                </td>
+                <td align="right">Location:
+                    <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete"/>
+                </td>
+            </tr>
+        </table>
+    </div>
 
-	<div class="ke-form-content">
-		<fieldset>
-			<legend>Reason</legend>
+    <div class="ke-form-content">
+        <fieldset>
+            <legend>Reason</legend>
 
-			<table>
-				<tr>
-					<td>Reason for visit</td>
-					<td><obs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="2" cols="80"/></td>
-				</tr>
-			</table>
-		</fieldset>
+            <table>
+                <tr>
+                    <td>Reason for visit</td>
+                    <td>
+                        <obs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="2" cols="80"/>
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
 
-		<fieldset>
-			<legend>Vital Signs</legend>
+        <fieldset>
+            <legend>Vital Signs</legend>
 
-			<table>
-				<tr>
-					<td>Temp</td>
-					<td><obs conceptId="5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> &#176;C</td>
-				</tr>
-				<tr>
-					<td>Pulse Rate</td>
-					<td><obs conceptId="5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-				<tr>
-					<td>BP</td>
-					<td><obs  conceptId="5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/> / <obs conceptId="5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
-				</tr>
-				<tr>
-					<td>Respiratory Rate</td>
-					<td><obs conceptId="5242AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-				<tr>
-					<td>Oxygen Saturation</td>
-					<td><obs conceptId="5092AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-			</table>
-		</fieldset>
+            <table>
+                <tr>
+                    <td>Temp</td>
+                    <td>
+                        <obs conceptId="5088AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        &#176;C
+                    </td>
+                </tr>
+                <tr>
+                    <td>Pulse Rate</td>
+                    <td>
+                        <obs conceptId="5087AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>BP</td>
+                    <td>
+                        <obs conceptId="5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        /
+                        <obs conceptId="5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        mmHg
+                    </td>
+                </tr>
+                <tr>
+                    <td>Respiratory Rate</td>
+                    <td>
+                        <obs conceptId="5242AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Oxygen Saturation</td>
+                    <td>
+                        <obs conceptId="5092AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
 
-		<fieldset>
-			<legend>Other Recordings</legend>
+        <fieldset>
+            <legend>Other Recordings</legend>
 
-			<table>
-				<tr>
-					<th> </th>
-					<th>Current</th>
-					<th>Recent</th>
-				</tr>
-				<tr>
-					<td>Weight</td>
-					<td><obs id="weight" conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />kg</td>
-					<td><recentObs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-				<tr>
-					<td>Height</td>
-					<td><obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />cm</td>
-					<td><recentObs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-				<tr>
-					<td>BMI</td>
-					<td><span id="calculated-bmi" class="value"></span></td>
-					<td>-</td>
-				</tr>
-				<tr>
-					<td>MUAC</td>
-					<td><obs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-					<td><recentObs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-				</tr>
-				<includeIf velocityTest="$patient.gender == 'F' ">
-					<tr>
-						<td>LMP</td>
-						<td><obs id="lmp-date" conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-						<td><recentObs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
-					</tr>
-				</includeIf>
-			</table>
-		</fieldset>
-	</div>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Current</th>
+                    <th>Recent</th>
+                </tr>
+                <tr>
+                    <td>Weight</td>
+                    <td>
+                        <obs id="weight" conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        kg
+                    </td>
+                    <td>
+                        <recentObs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Height</td>
+                    <td>
+                        <obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        cm
+                    </td>
+                    <td>
+                        <recentObs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>BMI</td>
+                    <td><span id="calculated-bmi" class="value"></span></td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>MUAC</td>
+                    <td>
+                        <obs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                    <td>
+                        <recentObs conceptId="1343AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                    </td>
+                </tr>
+                <includeIf velocityTest="$patient.gender == 'F' ">
+                    <tr>
+                        <td>LMP</td>
+                        <td>
+                            <obs id="lmp-date" conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        </td>
+                        <td>
+                            <recentObs conceptId="1427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                        </td>
+                    </tr>
+                </includeIf>
+            </table>
+        </fieldset>
+    </div>
 
-	<div class="ke-form-footer">
-		<submit />
-	</div>
+    <div class="ke-form-footer">
+        <submit/>
+    </div>
 
 </htmlform>
