Enabled the BMI calculation of recent obs

--- a/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalEncounter.html
@@ -50,7 +50,7 @@
 			getField('weight.value').change(onWeightOrHeightChange);
 			getField('height.value').change(onWeightOrHeightChange);
 			onWeightOrHeightChange();
-			//displayRecentBmi();
+			displayRecentBmi();
 
 			var strtext = "";
 			var familyPlanningOption = getValue('fplanning.value');
