Enabled all transferred out patients to appear on the listing Edited face page to allow date editing

--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257FacePage.html
@@ -1027,7 +1027,7 @@ jq(function() {
             </tr>
             <tr>
                 <td>Date Enrolled in HIV Care</td>
-                <td><obs id="date_Enrolled" conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
+                <td><obs conceptId="160555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></td>
                 <td>WHO Stage
 
                     <span id="initialWhoStageAd"><obs id="whostage" conceptId="160553AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
