Disabled some section on form load when when a patient exposed status is no or unknown

--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsEnrollment.html
@@ -175,6 +175,7 @@
 			//include the father details if any
 			includeFathersNames();
 			//disable arv prophylaxis when a child is NOT exposed and enable whenever they are exposed
+			 heiInfants();
 			 jq('#hiv-exposed-child input').click(heiInfants);
 
 			beforeSubmit.push(function() {
