Restored currently on care, currently on ART to nascop guidelines

--- a/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
@@ -206,7 +206,7 @@
 								<td><obs conceptId="161564AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" size="30" /></td>
 							</tr>
 							<tr>
-								<td>District Reg Number*</td>
+								<td>District Reg Number</td>
 								<td><patient field="identifier" identifierTypeId="d8ee3b8c-a8fc-4d6b-af6a-9423be5f8906" required="false"/></td>
 							</tr>
 							<tr>
