--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -33,6 +33,8 @@ isPediatric = null; // Set later by AJAX lookup
 /**
  * TODO use a lookup tag to get these concept ids. Will require HTML-463
  */
+var SELF = 978;
+var YES_CONCEPT_ID = 1065;
 var YES_CONCEPT_ID = 1065;
 var NO_CONCEPT_ID = 1066;
 var ABORTION_CONCEPT_ID = 159896;
@@ -51,6 +53,14 @@ var WHO_STAGE_3_ADULT_CONCEPT_ID = 1206;
 var WHO_STAGE_4_ADULT_CONCEPT_ID = 1207;
 var WHO_STAGES_PEDS = [ WHO_STAGE_1_PEDS_CONCEPT_ID, WHO_STAGE_2_PEDS_CONCEPT_ID, WHO_STAGE_3_PEDS_CONCEPT_ID, WHO_STAGE_4_PEDS_CONCEPT_ID ];
 var WHO_STAGES_ADULT = [ WHO_STAGE_1_ADULT_CONCEPT_ID, WHO_STAGE_2_ADULT_CONCEPT_ID, WHO_STAGE_3_ADULT_CONCEPT_ID, WHO_STAGE_4_ADULT_CONCEPT_ID ];
+
+function onPersonPresentChange() {
+    if (getValue('person-present.value') == SELF) {
+        jq('.patient-details :input').prop('disabled', false);
+    } else {
+        jq('.patient-details :input').prop('disabled', true);
+    }
+}
 
 function onWeightOrHeightChange() {
     var display = '';
@@ -200,11 +210,15 @@ function viralLoadValidation(){
 }
 
 jq(function() {
+
+    jq('#person-present input').click(onPersonPresentChange);
+
     getField('weight.value').change(onWeightOrHeightChange);
     getField('height.value').change(onWeightOrHeightChange);
     getField('encounter-date.value').change(onEncounterDateChange);
     getField('ldl.value').change(viralLoadValidation);
 
+    onPersonPresentChange();
     onWeightOrHeightChange();
     onEncounterDateChange();
     viralLoadValidation();
@@ -343,23 +357,23 @@ jq(function() {
     <td>(d)</td>
     <td colspan="2"><span id="calculated-duration-current-regimen" class="value"></span></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">Weight (kg) / Blood Pressure</th>
     <td>(e)</td>
     <td><obs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="weight" /></td>
     <td><obs conceptId="5085AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />/<obs conceptId="5086AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />mmHg</td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">Height (cm)</th>
     <td>(f)</td>
     <td colspan="2"><obs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="height" /></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">BMI</th>
     <td>(g)</td>
     <td colspan="2"><span id="calculated-bmi" class="value"></span></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th rowspan="2">Pregnancy</th>
     <th colspan="2">Status</th>
     <td>(h)</td>
@@ -389,7 +403,7 @@ jq(function() {
         </includeIf>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2"><span id="pregdate-label"></span></th>
     <td>(i)</td>
     <td colspan="2">
@@ -409,7 +423,7 @@ jq(function() {
         </includeIf>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th rowspan="2">FP Status</th>
     <th colspan="2">FP/No FP</th>
     <td>(j)</td>
@@ -423,7 +437,7 @@ jq(function() {
                 />
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">Method/Why</th>
     <td>(k)</td>
     <td>
@@ -451,7 +465,7 @@ jq(function() {
                 />
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th rowspan="2">Tuberculosis Status</th>
     <th colspan="2">Status</th>
     <td>(l)</td>
@@ -468,7 +482,7 @@ jq(function() {
         Treatment No. <obs conceptId="161654AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">TBRx #</th>
     <td>(m)</td>
     <td colspan="2">
@@ -478,7 +492,7 @@ jq(function() {
         </includeIf>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">Potential Side Effects</th>
     <td>(n)</td>
     <td colspan="2">
@@ -507,7 +521,7 @@ jq(function() {
         </obsgroup>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">New OIs &amp; Other Problems</th>
     <td>(o)</td>
     <td colspan="2">
@@ -682,28 +696,28 @@ jq(function() {
         </obsgroup>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th rowspan="6">Laboratory<br />Investigations<br />Done</th>
     <th colspan="2">CD4 (# or %)</th>
     <td>(x)</td>
     <td colspan="2">Count: <obs conceptId="5497AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /> or <obs conceptId="730AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" />%</td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">Hgb</th>
     <td>(y)</td>
     <td colspan="2"><obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">RPR</th>
     <td>(z)</td>
     <td colspan="2"><obs conceptId="1619AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">TB Sputum</th>
     <td>(aa)</td>
     <td colspan="2"><obs conceptId="307AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="sputumResults" answerConceptIds="159985AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1362AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1363AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1364AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Scanty,+,++,+++,Negative" /></td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="2">HIV Viral Load</th>
     <td>(ab)</td>
     <td colspan="2" >
@@ -713,7 +727,7 @@ jq(function() {
     </td>
 </tr>
 
-<tr>
+<tr class="patient-details">
     <th colspan="2">Other</th>
     <td>(ac)</td>
     <td colspan="2">
@@ -727,7 +741,7 @@ jq(function() {
         </div>
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th colspan="3">Referral / Hospitalized</th>
     <td>(ad)</td>
     <td>
@@ -758,7 +772,7 @@ jq(function() {
         <obs conceptId="160581AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Not applicable" style="checkbox" />
     </td>
 </tr>
-<tr>
+<tr class="patient-details">
     <th rowspan="2">PwP<br />Services<br />(&#10003;)</th>
     <th>Disclosure</th>
     <th>Partner Tested</th>
