Added ARV adherence to HIV Addendum.

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -171,6 +171,29 @@
 		</fieldset>
 
 		<fieldset>
+			<legend>ARV</legend>
+			<table>
+				<tr>
+					<td>
+						<table cellpadding="0" border="0" cellspacing="5">
+							<tr>
+								<td>Adherence</td>
+								<td>
+									<obs
+											conceptId="1658AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerConceptIds="159405AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159406AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159407AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+											answerLabels="Good (G),Fair (F),Poor (P)"
+											style="radio"
+											/>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+			</table>
+		</fieldset>
+
+		<fieldset>
 			<legend>Decision Points</legend>
 			<table>
 				<tr>
