Make return date a mandatory field: https://www.pivotaltracker.com/story/show/118288725

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivClinicalEncounterAddendum.html
@@ -208,7 +208,7 @@
 				</tr>
 				<tr>
 					<td>Return Visit Date:</td>
-					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" /> </td>
+					<td><obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" required="true" /> </td>
 				</tr>
 			</table>
 		</fieldset>
